<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/halloweenbackgroundlogin" /> <!-- Ajusta el tipo de escala según necesites -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/layoutshape"
        android:orientation="vertical"
        android:padding="20dp">

        <!-- Header -->

        <TextView
            android:id="@+id/headerLogIn"
            style="@style/headerStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/headerSignIn" />

        <!-- Form -->

        <TextView
            android:id="@+id/emailTextView"
            style="@style/textViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emailTextView" />

        <EditText
            android:id="@+id/email"
            style="@style/editTextStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/emailEditText"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/passwordTextView"
            style="@style/textViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/passwordTextView" />

        <EditText
            android:id="@+id/password"
            style="@style/editTextStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/passwordEditText"
            android:inputType="textPassword" />

        <!-- Button and redirect -->

        <Button
            android:id="@+id/loginButton"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttongradient"
            android:text="@string/signInButton" />

        <Button
            android:id="@+id/signInButton"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@drawable/buttongradientsignin"
            android:text="@string/signUpButton" />

        <TextView
            android:id="@+id/forgotPassword"
            style="@style/textViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgotTextView"
            android:textSize="@dimen/smallTextSize"
            android:textStyle="bold" />

    </LinearLayout>

</FrameLayout>




